# PMMail2000Converter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/PMMail2000Converter/: __init__.py  msg2eml.py
