[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PMMail2000Converter"
version = "1.0.0"
description = "Convert legacy PMMail 2000 email archives into EML files with folder reconstruction and logging."
readme = "README.md"
authors = [
    { name = "Your Name", email = "hostgrabber@gmx.dem" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "extract_msg"
]

[project.urls]
Homepage = "https://github.com/<USERNAME>/PMMail2000Converter"

[project.scripts]
pmmail-convert = "pmmail2000converter.msg2eml:main"
