[metadata]
name = PMMail2000Converter
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = Convert legacy PMMail 2000 archives into EML format
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/<USERNAME>/PMMail2000Converter

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
install_requires =
    tqdm
    extract_msg

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pmmail-convert = pmmail2000converter.msg2eml:main
